--- a/source/sass/blocks/technology.scss
+++ b/source/sass/blocks/technology.scss
@@ -269,6 +269,10 @@
     }
   }
 
+  .technology__item-4 {
+    margin-top: 0;
+  }
+
   .technology__item-text {
     width: 75%;
   }
@@ -294,8 +298,8 @@
     }
 
     &::after {
-      top: 129px;
-      left: 50px;
+      top: 128px;
+      left: 49px;
     }
   }
 
@@ -306,8 +310,8 @@
     }
 
     &::after {
-      top: 159px;
-      left: 234px;
+      top: 158px;
+      left: 233px;
     }
   }
 
@@ -318,8 +322,8 @@
     }
 
     &::after {
-      top: 113px;
-      left: 239px;
+      top: 112px;
+      left: 238px;
     }
   }
 
@@ -330,8 +334,8 @@
     }
 
     &::after {
-      top: 196px;
-      left: 363px;
+      top: 195px;
+      left: 362px;
     }
   }
 }
