--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -77,6 +77,7 @@
 }
 
 .contact__form-container input {
+  position: relative;
   display: inline-block;
   width: 49%;
   margin-top: 12px;
@@ -101,6 +102,7 @@
 
   &:valid {
     border: 2px solid #1dc04b;
+    position: relative;
 
     &::before {
       content: "";
@@ -118,8 +120,9 @@
     }
   }
 
-  &:invalid {
+  &:focus:invalid {
     border: 2px solid #f97676;
+    position: relative;
 
     &::before {
       content: "";
