--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -145,7 +145,7 @@
     background-image: url("../img/incorrect.svg");
     background-repeat: no-repeat;
     background-size: 12px 12px;
-    background-position: right top;
+    background-position: top 18px right 17px;
   }
 }
 
