--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -137,7 +137,7 @@
     background-image: url("../img/correct.svg");
     background-repeat: no-repeat;
     background-size: 16px 13px;
-    background-position: right top;
+    background-position: top 17px right 17px;
   }
 
   &:focus:invalid {
