--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -68,6 +68,14 @@
   font-size: 18px;
 }
 
+.slider__item--locked {
+  display: none;
+}
+
+.slider__item--active {
+  display: block;
+}
+
 @media (max-width: $tablet-width) {
   .slider__button--back {
     &::before {
