--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -16,7 +16,7 @@ body {
   background-image: url("../img/body-background.png");
   background-repeat: no-repeat;
   background-size: 100% auto;
-  background-position: 50% 0;
+  background-position: 50% 40%;
 }
 
 img {
