--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,6 @@
 @import "scaffolding.scss";
-@import "normalize.scss";
-@import "swiper.scss";
+@import "vendor/normalize.scss";
+@import "vendor/swiper.scss";
 @import "variables.scss";
 @import "mixins.scss";
 @import "blocks/button.scss";
