--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -137,7 +137,9 @@
 
 @media (max-width: $tablet-width) {
   .page-header__wrapper {
-    padding-top: 20px;
+    padding-top: 24px;
+    padding-left: 25px;
+    padding-right: 28px;
   }
 
   .page-header__navigation {
