--- a/source/sass/blocks/explanation.scss
+++ b/source/sass/blocks/explanation.scss
@@ -13,7 +13,7 @@
 .explanation__title {
   @include title;
   margin-top: 72px;
-  margin-bottom: 58px;
+  margin-bottom: 46px;
 }
 
 .explanation__list {
@@ -33,7 +33,7 @@
   display: flex;
 
   width: 48.3%;
-  margin-bottom: 78px;
+  margin-bottom: 64px;
   box-sizing: border-box;
 
   &:nth-child(2n) {
@@ -64,11 +64,11 @@
     background-image: url("../img/long-strip.svg");
     background-repeat: no-repeat;
     background-position: 0 0;
-    width: 86%;
-    height: 49%;
+    width: 84%;
+    height: 40%;
 
-    top: 138px;
-    right: 100%;
+    top: 157px;
+    right: 102%;
   }
 }
 
@@ -93,9 +93,9 @@
 
 .explanation__column-image {
   min-width: 195px;
-  min-height: 130px;
+  min-height: 150px;
   background-repeat: no-repeat;
-  background-position: 0 0;
+  background-position: 0 12px;
   background-size: 195px 130px;
 
   position: relative;
@@ -111,7 +111,7 @@
     border: 2px solid #0dd1a2;
 
     box-sizing: border-box;
-    top: -12px;
+    top: 0;
     left: 12px;
 
     z-index: -1;
@@ -128,7 +128,7 @@
     border-radius: 50%;
     box-sizing: border-box;
     left: -8px;
-    top: 97px;
+    top: 109px;
 
     font-weight: bold;
     font-size: 28px;
@@ -171,6 +171,7 @@
 
 .explanation__column-text {
   width: 55%;
+  margin-top: 12px;
 
   box-sizing: border-box;
 
@@ -220,14 +221,6 @@
   display: none;
 }
 
-.explanation__list .slider__item--locked {
-  display: flex;
-}
-
-.explanation__list .slider__item--active {
-  display: flex;
-}
-
 @media (max-width: $desktop-width) {
   .explanation__item {
     flex-wrap: wrap;
@@ -275,13 +268,14 @@
 
   .explanation__title {
     margin-top: 58px;
-    margin-bottom: 53px;
+    margin-bottom: 41px;
 
     padding-bottom: 8px;
   }
 
   .explanation__list {
     padding-left: 0;
+    flex-wrap: nowrap;
   }
 
   .explanation__item {
@@ -354,14 +348,7 @@
     display: flex;
     align-items: center;
 
-    width: 120px;
+    width: 198px;
     margin-left: auto;
-  }
-
-  .explanation__slider-number {
-    display: block;
-    position: absolute;
-    bottom: -50px;
-    right: 120px;
   }
 }
