--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -30,8 +30,8 @@
 }
 
 .product__slider {
-  width: 100%;
-  max-width: 562px;
+  width: 48%;
+  min-width: 420px;
 
   margin-top: 147px;
 
@@ -82,7 +82,7 @@
   @include list-reset;
 }
 
-.product__slider-item {
+.product__slide {
   position: relative;
   line-height: 0;
 }
@@ -91,7 +91,7 @@
   display: flex;
   align-items: center;
 
-  width: 120px;
+  width: 198px;
   margin-left: auto;
 }
 
@@ -99,6 +99,18 @@
   position: absolute;
   bottom: -24px;
   right: 120px;
+}
+
+.product__slide-wrapper {
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+}
+
+.product__slide-image {
+  height: 100%;
+  width: auto;
+  max-width: none;
 }
 
 @media (max-width: $desktop-width) {
@@ -112,7 +124,7 @@
 
   .product__slider {
     position: relative;
-
+    width: 562px;
     margin-top: 122px;
   }
 }
@@ -126,10 +138,16 @@
     width: 100%;
   }
 
+  .product__title {
+    margin-top: 65px;
+    line-height: 1.3;
+    padding-bottom: 6px;
+  }
+
   .product__slider {
     width: 100%;
-    max-width: 100%;
-    margin-left: auto;
+    min-width: auto;
+    max-width: 562px;
     margin-right: auto;
     margin-top: 50px;
 
@@ -138,9 +156,14 @@
     }
   }
 
+  .product__slide-wrapper {
+    height: auto;
+  }
+
   .product__slider-content {
     position: static;
     width: 100%;
+    padding-bottom: 14px;
 
     font-size: 18px;
     text-align: left;
@@ -151,6 +174,11 @@
   }
 
   .product__slider-item {
+    width: 100%;
+  }
+
+  .product__slide-image {
+    height: auto;
     width: 100%;
   }
 }
