--- a/source/sass/blocks/technology.scss
+++ b/source/sass/blocks/technology.scss
@@ -208,7 +208,7 @@
   }
 
   .technology__list {
-    flex-direction: column;
+    flex-wrap: nowrap;
     padding-left: 0;
     padding-bottom: 0;
   }
@@ -299,7 +299,7 @@
     display: flex;
     align-items: center;
 
-    width: 120px;
+    width: 198px;
     margin-left: auto;
   }
 
