--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -50,6 +50,7 @@
 .page-header__logo {
   margin: 0;
   width: 200px;
+  height: 28px;
 }
 
 .page-header__logo-image {
@@ -57,6 +58,12 @@
 
   &:hover {
     fill: $green;
+  }
+}
+
+.page-header__logo-image--main {
+  &:hover {
+    fill: #ffffff;
   }
 }
 
@@ -122,6 +129,35 @@
 }
 
 @media (max-width: $desktop-width) {
+  .page-header__navigation {
+    width: 65%;
+  }
+
+  .page-header__item {
+    padding-right: 17px;
+
+    &::before {
+      right: 6px;
+    }
+  }
+
+  .page-header__link {
+    font-size: 13px;
+  }
+
+  .page-header__button {
+    font-size: 12px;
+    width: 93px;
+  }
+
+  .page-header__link-tel {
+    font-size: 13px;
+  }
+
+  .page-header__order {
+    width: 204px;
+  }
+
   .page-header-image {
     display: none;
   }
@@ -140,6 +176,12 @@
     padding-top: 24px;
     padding-left: 25px;
     padding-right: 28px;
+  }
+
+  .page-header__wrapper--main {
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .page-header__navigation {
@@ -176,19 +218,19 @@
       position: absolute;
       background-position: 0 0;
       top: 0;
-      left: 0;
+      right: 0;
     }
   }
 
   .page-header--close .page-header__toggle {
-    width: 29px;
+    width: 26px;
     height: 20px;
 
     &::before {
       background-image: url("../img/open-button.svg");
       background-repeat: no-repeat;
-      background-size: 29px 20px;
-      width: 29px;
+      background-size: 26px 20px;
+      width: 26px;
       height: 20px;
     }
   }
@@ -198,7 +240,7 @@
   }
 
   .page-header--open .page-header__toggle {
-    width: 19px;
+    width: 26px;
     height: 19px;
 
     &::before {
@@ -211,6 +253,8 @@
   }
 
   .page-header__button {
+    width: 108px;
+    font-size: 14px;
     order: -1;
   }
 
@@ -238,6 +282,18 @@
 
   .page-header--open {
     background-color: rgba(28, 28, 28, 0.9);
+    height: 100%;
+    position: fixed;
+    width: 100%;
+    z-index: 10;
+  }
+
+  .page-header__link {
+    font-size: 15px;
+  }
+
+  .page-header__link-tel {
+    font-size: 16px;
   }
 
   .page-header__social {
