--- a/source/sass/blocks/questions.scss
+++ b/source/sass/blocks/questions.scss
@@ -1,7 +1,6 @@
 .questions {
   display: flex;
   flex-direction: column;
-  min-height: 92vh;
 
   position: relative;
 
@@ -15,7 +14,7 @@
 
   box-sizing: border-box;
 
-  &::before {
+  /*&::before {
     content: "";
     position: absolute;
     background-image: url("../img/boy.png");
@@ -28,7 +27,7 @@
 
     right: -33px;
     bottom: 0;
-  }
+  }*/
 }
 
 .questions__main {
