--- a/source/sass/blocks/technology.scss
+++ b/source/sass/blocks/technology.scss
@@ -173,8 +173,10 @@
   border: none;
   background-color: #15b38d;
 
-  bottom: 20px;
-  right: 11px;
+  top: 498px;
+  right: 37%;
+
+  z-index: 5;
 
   cursor: pointer;
 
