--- a/source/sass/blocks/explanation.scss
+++ b/source/sass/blocks/explanation.scss
@@ -1,10 +1,10 @@
 .explanation {
-  max-width: 1366px;
   width: 100%;
+  max-width: 1238px;
   margin: 0 auto;
 
-  padding-left: 90px;
-  padding-right: 94px;
+  padding-left: 26px;
+  padding-right: 31px;
 
   box-sizing: border-box;
   flex-grow: 1;
@@ -122,7 +122,6 @@
 
     width: 40px;
     height: 40px;
-    padding-left: 12px;
 
     background-color: #ffffff;
     border-radius: 50%;
@@ -134,6 +133,8 @@
     font-size: 28px;
 
     color: #0dd1a2;
+    text-align: center;
+    line-height: 1.4;
   }
 }
 
