--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -51,6 +51,7 @@
   line-height: 1.3;
   color: #ffffff;
   text-decoration: none;
+  transition-duration: 0.3s;
 
   &:hover {
     text-decoration: underline;
