--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -63,29 +63,30 @@
 
 .popup__close-button {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 16px;
+  right: 16px;
   background-color: transparent;
-  width: 48px;
-  height: 48px;
+  width: 20px;
+  height: 20px;
 
   border: none;
 
   cursor: pointer;
+  transition-duration: 0.3s;
 
   &::before {
     content: "";
 
     position: absolute;
     width: 1px;
-    height: 14px;
+    height: 19px;
 
     background-color: #1c1c1c;
 
     transform: rotate(-45deg);
 
-    top: 17px;
-    left: 50%;
+    top: 1px;
+    left: 10px;
   }
 
   &::after {
@@ -93,14 +94,14 @@
 
     position: absolute;
     width: 1px;
-    height: 14px;
+    height: 19px;
 
     background-color: #1c1c1c;
 
     transform: rotate(45deg);
 
-    top: 17px;
-    left: 50%;
+    top: 1px;
+    left: 10px;
   }
 
   &:hover {
