--- a/source/sass/blocks/scroll.scss
+++ b/source/sass/blocks/scroll.scss
@@ -29,6 +29,7 @@
   text-transform: uppercase;
 
   cursor: pointer;
+  transition-duration: 0.3s;
 
   &:hover {
     opacity: 0.5;
@@ -92,6 +93,7 @@
   display: block;
 
   cursor: pointer;
+  transition-duration: 0.3s;
 
   &:hover .scroll__social-image {
     opacity: 1;
