--- a/source/sass/blocks/popup.scss
+++ b/source/sass/blocks/popup.scss
@@ -74,6 +74,8 @@
   cursor: pointer;
   transition-duration: 0.3s;
 
+  outline: none;
+
   &::before {
     content: "";
 
@@ -106,6 +108,10 @@
 
   &:hover {
     opacity: 0.3;
+  }
+
+  &:focus {
+    outline-color: 1px solid  $green;
   }
 }
 
