--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -30,6 +30,7 @@
 
   position: relative;
   transition-duration: 0.3s;
+  outline: none;
 
   &::before {
     content: "";
@@ -46,6 +47,10 @@
 
   &:hover::before {
     border-color: $green;
+  }
+
+  &:focus {
+    outline: 1px solid $green;
   }
 }
 
