--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -1,8 +1,8 @@
 body {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-  height: 0;
+  height: 100vh;
+  overflow: auto;
   margin: 0;
   padding: 0;
 
@@ -85,5 +85,11 @@ img {
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/body-background-main-2@1x.png"), url("../img/body-background-main@2x.jpg");
+  }
+
+  .main-background__wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
   }
 }
