--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -2,6 +2,8 @@
   max-width: 1238px;
   width: 100%;
   margin: 0 auto;
+  margin-top: 5%;
+  margin-bottom: 10px;
   flex-grow: 1;
 
   padding-left: 26px;
@@ -12,7 +14,6 @@
 
 .product__title {
   @include title;
-  margin-top: 70px;
   margin-bottom: 18px;
 }
 
@@ -124,14 +125,20 @@
 
   .product__slider {
     position: relative;
+    align-self: center;
     width: 562px;
     margin-top: 122px;
+  }
+
+  .product__slider-content {
+    left: -16.5%;
   }
 }
 
 @media (max-width: $tablet-width) {
   .product {
     @include padding;
+    margin-top: 65px;
   }
 
   .product__text-container {
@@ -139,7 +146,6 @@
   }
 
   .product__title {
-    margin-top: 65px;
     line-height: 1.3;
     padding-bottom: 6px;
   }
