--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -18,6 +18,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 40%;
+  background-attachment: fixed;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/body-background@2x.png");
@@ -78,18 +79,17 @@ img {
 }
 
 .main-background {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: auto;
   background-image: url("../img/body-background-main-2@1x.png"), url("../img/body-background-main@1x.jpg");
   background-repeat: no-repeat, no-repeat;
   background-size: cover, cover;
   background-position: 50% 0, 50% 0;
+  background-attachment: fixed;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../img/body-background-main-2@1x.png"), url("../img/body-background-main@2x.jpg");
-  }
-
-  .main-background__wrapper {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
   }
 }
