--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,6 @@
 @import "variables.scss";
 @import "mixins.scss";
+@import "fonts.scss";
 @import "scaffolding.scss";
 @import "vendor/normalize.scss";
 @import "vendor/swiper.scss";
