--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,6 +1,8 @@
-$green: #0dd1a2;
-$dark-green: #15b38d;
 $desktop-width: 1023px;
 $tablet-width: 767px;
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
+
+$green: #0dd1a2;
+$dark-green: #15b38d;
+$dark-grey: #1c1c1c;
