--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -27,7 +27,7 @@
   height: 48px;
   padding: 0;
   border: none;
-  background-color: #1c1c1c;
+  background-color: $dark-grey;
 
   box-sizing: border-box;
 
