--- a/source/sass/blocks/questions.scss
+++ b/source/sass/blocks/questions.scss
@@ -107,7 +107,7 @@
   width: 68px;
   height: 100%;
 
-  background-color: #15b38d;
+  background-color: $dark-green;
   border: none;
   border-radius: 0;
   box-sizing: border-box;
