--- a/source/sass/blocks/explanation.scss
+++ b/source/sass/blocks/explanation.scss
@@ -133,7 +133,7 @@
     font-weight: bold;
     font-size: 28px;
 
-    color: #0dd1a2;
+    color: $green;
     text-align: center;
     line-height: 1.4;
   }
