--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -6,3 +6,6 @@ $retina-dppx: 1.5dppx;
 $green: #0dd1a2;
 $dark-green: #15b38d;
 $dark-grey: #1c1c1c;
+$dark-grey-opacity: rgba(28, 28, 28, 0.4);
+$white: #f3f3f3;
+$black-opacity:  rgba(255, 255, 255, 0.3);
